Adicionei todos os arquivos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width", initial-scale=1>
-	<title>Modelo Responsivo</title>
+	<title>Pizzaria do Bairro</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 
@@ -11,130 +11,216 @@
 <body>
 	<header>
 		<nav>
-			<a href="#">Link1</a>
-			<a href="#">Link2</a>
-			<a href="#">Link3</a>
+			<a href="#pizzas">PIZZAS</a>
+			<a href="#bebidas">BEBIDAS</a>
+			<a href="#salgados">SALGADOS</a>
 		</nav>
-		<h3>TECTREINAMENTOS INFORMATICA</h3>
-		<h4>Desenvolvedor Web- Font End</h4>
+		<br>
+	<figure>
+		<img src="img/pizzaBairro.png" alt="Logo do Site">
+	</figure>
+
+	
+
 	</header>
 
 
 	<div id="compras">
-		<h4>Caixa de Compras</h4>
-		<button>COMPRAR AGORA</button>
+		<h4 id="botao">Clique no botão e faça seu pedido</h4>
+		<br>
+		<button id="btn-compras"><a href="https://api.whatsapp.com/send?phone=5513997110460">Fazer meu pedido</a></button>
 	</div>
 	<br>
 
 
 	<section class="conteudo-topo">
-		<h1>Primeiro texto</h1>
+		<h1>Pizzas, Bebidas e Salgado todos os dias!</h1>
 
-		<figure>
-			<img class="imagem-site" src="img/imagem-exemplo.png" alt="primeira imagem do site">
-			<figcaption>legenda para o site</figcaption>
-		</figure>
-		<p>Análise de sistemas é a atividade que tem como finalidade a realização de estudos de processos a fim de encontrar o melhor caminho racional para que a informação possa ser processada. Os analistas de sistemas estudam os diversos sistemas existentes entre hardwares (equipamentos), softwares (programas) e o usuário final.</p>
-
-		<p>Os seus comportamentos e aplicações são desenvolvidos a partir de soluções que serão padronizadas e transcritas da forma que o computador possa executar.</p>
-
+		
+		<h5>Promoção</h5>
+		<h5>Segunda a Quinta todas as pizzas por apenas 69,99</h5>
 
 	</section>
 	<br>
 
 
-
-
-	<section class="conteudo">
-		<h2>segundo texto</h2>
-
-		<p>Os profissionais da área geram softwares (programas), que são executados em hardwares (equipamentos) operados por usuários (indivíduos), preparados e treinados em procedimentos operacionais padronizados, dotados de conhecimentos do software e hardware para seu trabalho. A partir de então a análise de sistemas é uma profissão cujas responsabilidades concentram-se na análise do sistema e na administração de sistemas computacionais. Cabe a este profissional parte da organização, implantação e manutenção de aplicativos e redes de computadores, ou seja, o analista de sistemas é o responsável pelo levantamento de informações sobre uma empresa a fim de utilizá-las no desenvolvimento de um sistema para a mesma ou para o levantamento de uma necessidade específica do cliente para desenvolver este programa específico com base nas informações colhidas.</p>
-
-	</section>
 	<br>
-
-
-
-
-	<section class="conteudo">
-		<h2>terceiro texto</h2>
-
-		<figure>
-			<img class="imagem-site" src="img/imagem-exemplo.png" alt="segunda imagem do site">
-			<figcaption>legenda da segunda imagem</figcaption>
-		</figure>
-		<p>O profissional geralmente possui conhecimento adquirido em faculdades de Sistemas de informação, Sistemas para Internet, Ciência da computação, Análise de sistemas, Engenharia de Computação, Engenharia de Software, Processamento de dados, Informática, Licenciatura em Computação ou outros cursos similares, mas a ausência de restrições para o exercício do cargo permite a profissionais capacitados de outras áreas ou mesmo que não possuem educação superior cumprirem este papel nas empresas.</p>
-
-	</section>
+	<a href="#" id="pizzas"></a>
 	<br>
-
-
-
-	
-	<section class="conteudo">
-		<h2>quarto texto</h2>
-		<p>Como é uma ênfase, o foco e o núcleo de trabalho está voltado para o processo de desenvolvimento de software, levando em conta a área tecnológica em que irá auxiliar. O analista de sistemas deve servir como um tradutor entre as necessidades do usuário e o programa a ser desenvolvido pelo programador. Para isto, deve ter conhecimento abrangente da área de negócio na qual o sistema será desenvolvido, a fim de que possa implementar corretamente as regras de negócio.</p>
-	</section>
-	<br>
-
-
 	<section class="conteudo" id="grid-conteudo">
-	
+		<h5>Cardápio de Pizzas</h5>
+	<br>
 		<div class="grid">
 			
-			<div>conteudo 1</div>
-			<div>conteudo 2</div>
-			<div>conteudo 3</div>
-			<div>conteudo 4</div>
-			<div>conteudo 5</div>
-			<div>conteudo 6</div>
+			<div>
+				<figure>
+					<img class="imagem-site" src="img/calabresa.jpg" alt="Pizza de Calabresa">
+					<figcaption ><a href="#"> Pizza de Calabresas </a></figcaption>
+				</figure>
+			</div>
 
+			<div>
+				<figure>
+					<img class="imagem-site" src="img/frango.jpg" alt="Pizza de frango">
+					<figcaption><a href="#"> Pizza de Frango</a></figcaption>
+				</figure>
+			</div>
+			
+			<div>
+				<figure>
+					<img class="imagem-site" src="img/marguerita.jpg" alt="Pizza de Marguerita">
+					<figcaption><a href="#"> Pizza de Marguerita</a></figcaption>
+				</figure>
+			</div>
+		<div>
+			<figure>
+				<img class="imagem-site" src="img/mussarela.jpg" alt="Pizza de Mussarela">
+				<figcaption><a href="#"> Pizza de Mussarela</a></figcaption>
+			</figure>
+		</div>
+			<div>
+				<figure>
+					<img class="imagem-site" src="img/palmito.jpg" alt="Pizza de Palmito">
+					<figcaption><a href="#"> Pizza de Palmito</a></figcaption>
+				</figure>
+			</div>
+			
+			<div>
+				<figure>
+					<br>
+					<img class="imagem-site" src="img/portuguesa.jpg" alt="Pizza de Portuguesa">
+					<figcaption><a href="#"> Pizza de Portuguesa</a></figcaption>
+				</figure>
+			</div>
+			
 		</div>
 
 
 	</section>
-	<br>
 
-	<section class="conteudo" id="formulario">	
-		<h2>selecione um produto para mais informações</h2>
-		<br>
-		<form action="#" method="get" target="_blank">
-			<label for="nome">Nome</label><br>
-			<input type="text" id="nome" name="nome" placeholder="digite o seu nome">
-			<br><br>
 
-			<label for="telefone"> telefone</label><br>
-			<input type="tel" id="tel" name="tel" placeholder="digite seu telefone com dd">
-			<br><br>
 
-			<input type="checkbox" id="opcoes" name="html" value="html">
-			<label for="html">Quero saber mais sobre html e css</label>
-			<br><br>
+<a href="#" id="bebidas"></a>
+<br> 
+<section class="conteudo" id="grid-conteudo">
+	<h5>Bebidas</h5>
+<br>
+	<div class="grid">
+		
+		<div>
+			<figure>
+				<img class="imagem-site" src="img/refri1.jpg" alt="Coca-Cola">
+				<figcaption><a href="#"> Coca-Cola 2lt</a></figcaption>
+			</figure>
+		</div>
 
-			<input type="checkbox" id="opcoes" name="php" value="php">
-			<label for="php"> Eu quero saber mais sobre HTML,CSS E PHP</label>
-			<br><br>
+		<div>
+			<figure>
+				<img class="imagem-site" src="img/refri2.jpg" alt="Fanta Laranja">
+				<figcaption><a href="#"> Fanta Laranja 2lt</a></figcaption>
+			</figure>
+		</div>
+		
+		<div>
+			<figure>
+				<img class="imagem-site" src="img/refri3.jpg" alt="Refrigerante de soda">
+				<figcaption><a href="#"> Soda Limonada 2lt</a></figcaption>
+			</figure>
+		</div>
+	<div>
+		<figure><br>
+			<img class="imagem-site" src="img/refri4.jpg" alt="	Refrigerante em Lata">
+			<figcaption><a href="#"> Refrigerante em lata Variado 350ml</a></figcaption>
+		</figure>
+	</div>
+		<div>
+			<figure><br>
+				<img class="imagem-site" src="img/refri5.jpg" alt="Coca-Cola em lata">
+				<figcaption><a href="#"> Coca-Cola em lata 350ml</a></figcaption>
+			</figure>
+		</div>
+		
+		<div id="guarana">
+			<figure>
+				<br>
+				<img class="imagem-site"  src="img/refri6.jpg" alt="Guaraná em lata ">
+				<figcaption><a href="#"> Guaraná em lata 350ml</a></figcaption>
+			</figure>
+		</div>
+		
+	</div>
 
-			<input type="checkbox" id="opcoes" name="Javascript" value="Javascript">
-			<label for="Javascript"> Eu quero saber mais sobre HTML,CSS,PHP e Javascript</label>
-			<br><br>
 
-			<label for="mensagem"> Deixe a sua mensagem(opcional):</label>
-			<br><br>
-			<textarea id="mensagem" rows="5" cols="25"></textarea>
-			<br><br>
-			<button id="btn-limpar" type="reset" value="limpar"> Limpar</button>&nbsp
-			<button id="btn-enviar" type="submite" value="enviar">Enviar</button>
-		</form>
-	</section>
+</section>
+<br>
+<a href="#" id="salgados"></a>
+<br>
+<section class="conteudo" id="grid-conteudo">
+	<h5>Cardápio de Salgados</h5>
+<br>
+	<div class="grid">
+		
+		<div>
+			<figure>
+				<img class="imagem-site" src="img/salgados1.jpg" alt="Foto de uma Coxinha">
+				<figcaption><a href="#"> Coxinha</a></figcaption>
+			</figure>
+		</div>
+
+		<div>
+			<figure>
+				<img class="imagem-site" src="img/salgados2.jpg" alt="Bolinho de Queijo">
+				<figcaption><a href="#"> Bolinhos de Queijo</a></figcaption>
+			</figure>
+		</div>
+		
+		<div>
+			<figure>
+				<img class="imagem-site" src="img/salgados3.jpg" alt="Mini Coxinhas">
+				<figcaption><a href="#"> Mini Coxinhas</a></figcaption>
+			</figure>
+		</div>
+	<div>
+		<figure>
+			<img class="imagem-site" src="img/salgados4.jpg" alt="Bauru">
+			<figcaption><a href="#"> Bauru</a></figcaption>
+		</figure>
+	</div>
+		<div>
+			<figure>
+				<img class="imagem-site" src="img/salgados5.jpg" alt="Salgados Sortidos">
+				<figcaption><a href="#"> Salgados Sortidos</a></figcaption>
+			</figure>
+		</div>
+		
+		<div>
+			<figure>
+				<br>
+				<img class="imagem-site" src="img/salgados6.jpg" alt="Mini Sortidos">
+				<figcaption><a href="#"> Mini Sortidos </a></figcaption>
+			</figure>
+		</div>
+		
+	</div>
+
+
+</section>
+
+
+
+
+
+
+
 <br>
 
 	<footer>
-		<h3>TECTREINAMENTOS INFORMATICA</h3>
-		<h4>Desenvolvimento web</h4>
-		<p>contato:</p>
-		<p>wpp:</p>
-		<p>direitos reservados</p>
+		<h3>Pizza do Bairro</h3>
+		<h4>A Melhor opção da Região</h4>
+		<p>wpp: 997110460</p>
+
+		<br>
+		<p>Desenvolvido por Issam Souss</p>
 	</footer>
 </body>
 </html>
